syntax = "proto3";

package gym;

message Environment {

  message Plugin {

    message Parameter {
      string input = 1;
      string value = 2;
    }
    
    string type = 1;
    map<string,Parameter> parameters = 2;
  }

  bool deploy = 1;
  string description = 2;
  string name = 3;
  Plugin plugin = 4;
}

message Scenario {

  message Link {
    string id = 1;
    string name = 2;
    string network = 3;
    string type = 4;
    repeated string connection_points = 5;
  }

  message Node {

    message ConnectionPoint {
      string id = 1;
      string address = 2;
      string interface = 3;
      string type = 4;
    }
    
    message Lifecycle {

      message Parameter {
        string input = 1;
        string value = 2;
      }

      enum Workflows {
        VNFBDWORKFLOWS_UNSET = 0;
        create = 1;
        configure = 2;
        start = 3;
        stop = 4;
        delete = 5;
        custom = 6;
      }
          

      string name = 1;
      repeated string implementation = 2;
      map<string,Parameter> parameters = 3;
      Workflows workflow = 4;
    }
    
    message Relationship {
      string name = 1;
      string target = 2;
      string type = 3;
    }

    message Resources {
    
      message Cpu {
        string cpu_bw = 1;
        string pinning = 2;
        uint64 vcpus = 3;
      }
    
      message Memory {
        uint64 size = 1;
        string unit = 2;
      }
    
      message Storage {
        uint64 size = 1;
        string unit = 2;
        string volumes = 3;
      }
      
      Cpu cpu = 1;
      Memory memory = 2;
      Storage storage = 3;
    }
    
    string id = 1;
    string image = 2;
    string format = 3;
    string type = 4;
    string role = 5;
    Resources resources = 6;
    map<string,ConnectionPoint> connection_points = 7;
    map<string,Lifecycle> lifecycle = 8;
    map<string,Relationship> relationships = 9;
    
  }
  
  message Policy {
    string name = 1;
    string action = 2;
    string targets = 3;
    string type = 4;
  }
  
  map<string,Link> links = 1;
  map<string,Node> nodes = 2;
  map<string,Policy> policies = 3;
}

message VnfBd {

  message Experiments {
    uint32 tests = 1;
    uint32 trials = 2;
  }

  message Target {
    string id = 1;
    string author = 2;
    string description = 3;
    string name = 4;
    string version = 5;
  }

  message Proceedings {

    message Attribute {
      string name = 1;
      string value = 2;
    }

    message Agent {
      
      message Prober {
        
        message Parameter {
          string input = 1;
          string value = 2;
        }  

        message Sched {
          uint32 from = 1;
          uint32 until = 2;
          uint32 duration = 3;
          uint32 interval = 4;
          uint32 repeat = 5;
        }

        uint32 id = 1;
        uint64 instances = 2;
        string name = 3;
        map<string,Parameter> parameters = 4;
        Sched sched = 5;
      }

      string uuid = 1;
      string name = 2;
      map<uint32,Prober> probers = 3;
    }

    message Monitor {
      
      message Host {
        string node = 1;
        string setting = 2;
      }
      
      message Listener {
        message Parameter {
          string input = 1;
          string value = 2;
        }   

        message Sched {
          uint32 from = 1;
          uint32 until = 2;
          uint32 duration = 3;
          uint32 interval = 4;
          uint32 repeat = 5;
        }
        
        uint32 id = 1;
        uint64 instances = 2;
        string name = 3;
        map<string,Parameter> parameters = 4;
        Sched sched = 5;
      }
      
      string uuid = 1;
      string name = 2;
      map<uint32,Listener> listeners = 3;
    }
        
    map<string,Attribute> attributes = 1;
    map<string,Agent> agents = 2;
    map<string,Monitor> monitors = 3;
  }

  string id = 1;
  string name = 2;
  string version = 3;
  string author = 4;
  string description = 5;
  Experiments experiments = 6;
  Environment environment = 7;
  map<string,Target> targets = 8;
  Scenario scenario = 9;
  Proceedings proceedings = 10; 
}
