syntax = "proto3";

package gym;


import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";


message VnfPp {

  message Report {

    message Snapshot {

      message Evaluation {

        message Metric {
          string name = 1;
          string type = 2;
          string unit = 3;
          oneof value {
            double scalar = 4;
            google.protobuf.Struct series = 5;
          }
        }

        message Source {
          string call = 1;
          int32 id = 2;
          string name = 3;
          string type = 4;
          string version = 5;
        }

        message Timestamp {
          google.protobuf.Timestamp start = 1;
          google.protobuf.Timestamp stop = 2;
        }

        int32 id = 1;
        Source source = 2;
        map<string, Metric> metrics = 3;
        Timestamp timestamp = 4;
      }

      message Origin {
        string id = 1;
        string role = 2;
      }
      
      int32 id = 1;
      uint32 trial = 2;
      Origin origin = 3;
      map<int32, Evaluation> evaluations = 4;
      google.protobuf.Timestamp timestamp = 5;
    }
 
    int32 id = 1;
    uint32 test = 2;
    map<int32, Snapshot> snapshots = 3;
    google.protobuf.Timestamp timestamp = 4;
  }
  
  string id = 1;
  string name = 2;
  string version = 3;
  string author = 4;
  string description = 5;
  google.protobuf.Timestamp timestamp = 6;
  map<int32, Report> reports = 7;
}
